--- a/autorelay/libp2p/stream/lpstream.html
+++ b/autorelay/libp2p/stream/lpstream.html
@@ -347,6 +347,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="readVarint(conn: LPStream): Future[uint64]">readVarint(conn: LPStream): Future[uint64]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">setupStreamTracker
+      <li><a class="reference" href="#setupStreamTracker%2Cstring"
+    title="setupStreamTracker(name: string): StreamTracker">setupStreamTracker(name: string): StreamTracker</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">shortLog
       <li><a class="reference" href="#shortLog%2CLPStream"
     title="shortLog(s: LPStream): auto">shortLog(s: LPStream): auto</a></li>
@@ -914,6 +919,19 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="setupStreamTracker,string" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#setupStreamTracker%2Cstring"><span class="Identifier">setupStreamTracker</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <a href="lpstream.html#StreamTracker"><span class="Identifier">StreamTracker</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/autorelay/libp2p/stream/lpstream.nim#L83"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L83" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="shortLog,LPStream" class="tohide">
 <dt><pre><span class="Keyword">func</span> <a href="#shortLog%2CLPStream"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -1091,7 +1109,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-20 12:54:19 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-20 13:56:57 UTC</small>
       </div>
     </div>
   </div>
