--- a/autonat-timeout/libp2p/protocols/connectivity/autonat.html
+++ b/autonat-timeout/libp2p/protocols/connectivity/autonat.html
@@ -212,7 +212,7 @@ window.addEventListener("DOMContentLoaded", main2);
   dialTimeout: Duration">Autonat</a></li>
   <li><a class="reference" href="#AutonatDial"
     title="AutonatDial = object
-  peerInfo: Option[AutonatPeerInfo]">AutonatDial</a></li>
+  peerInfo*: Option[AutonatPeerInfo]">AutonatDial</a></li>
   <li><a class="reference" href="#AutonatDialResponse"
     title="AutonatDialResponse = object
   status*: ResponseStatus
@@ -220,10 +220,15 @@ window.addEventListener("DOMContentLoaded", main2);
   ma*: Option[MultiAddress]">AutonatDialResponse</a></li>
   <li><a class="reference" href="#AutonatError"
     title="AutonatError = object of LPError">AutonatError</a></li>
+  <li><a class="reference" href="#AutonatMsg"
+    title="AutonatMsg = object
+  msgType*: MsgType
+  dial*: Option[AutonatDial]
+  response*: Option[AutonatDialResponse]">AutonatMsg</a></li>
   <li><a class="reference" href="#AutonatPeerInfo"
     title="AutonatPeerInfo = object
-  id: Option[PeerId]
-  addrs: seq[MultiAddress]">AutonatPeerInfo</a></li>
+  id*: Option[PeerId]
+  addrs*: seq[MultiAddress]">AutonatPeerInfo</a></li>
   <li><a class="reference" href="#AutonatUnreachableError"
     title="AutonatUnreachableError = object of LPError">AutonatUnreachableError</a></li>
   <li><a class="reference" href="#MsgType"
@@ -247,7 +252,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">encode
+      <ul class="simple nested-toc-section">decode
+      <li><a class="reference" href="#decode%2Ctypedesc%5BAutonatMsg%5D%2Cseq%5Bbyte%5D"
+    title="decode(_: typedesc[AutonatMsg]; buf: seq[byte]): Option[AutonatMsg]">decode(_: typedesc[AutonatMsg]; buf: seq[byte]): Option[AutonatMsg]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">encode
       <li><a class="reference" href="#encode%2CAutonatDial"
     title="encode(d: AutonatDial): ProtoBuffer">encode(d: AutonatDial): ProtoBuffer</a></li>
   <li><a class="reference" href="#encode%2CAutonatMsg"
@@ -323,7 +333,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="AutonatDial" class="tohide">
 <dt><pre><a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">peerInfo</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a><span class="Other">]</span>
+  <span class="Identifier">peerInfo</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -363,10 +373,26 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="AutonatMsg" class="tohide">
+<dt><pre><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
+  <span class="Identifier">msgType</span><span class="Operator">*</span><span class="Other">:</span> <a href="autonat.html#MsgType"><span class="Identifier">MsgType</span></a>
+  <span class="Identifier">dial</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">]</span>
+  <span class="Identifier">response</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatDialResponse"><span class="Identifier">AutonatDialResponse</span></a><span class="Other">]</span>
+</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/autonat-timeout/libp2p/protocols/connectivity/autonat.nim#L60"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L60" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="AutonatPeerInfo" class="tohide">
 <dt><pre><a href="autonat.html#AutonatPeerInfo"><span class="Identifier">AutonatPeerInfo</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
-  <span class="Identifier">id</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span>
-  <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span>
+  <span class="Identifier">id</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span>
+  <span class="Identifier">addrs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -439,6 +465,19 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<div id="decode,typedesc[AutonatMsg],seq[byte]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#decode%2Ctypedesc%5BAutonatMsg%5D%2Cseq%5Bbyte%5D"><span class="Identifier">decode</span></a><span class="Other">(</span><span class="Operator">_</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">buf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">]</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/autonat-timeout/libp2p/protocols/connectivity/autonat.nim#L123"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/connectivity/autonat.nim#L123" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="encode,AutonatDial" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDial"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -452,7 +491,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,AutonatMsg" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <span class="Identifier">AutonatMsg</span><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <a href="autonat.html#AutonatMsg"><span class="Identifier">AutonatMsg</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -530,7 +569,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-22 12:05:43 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-22 16:14:14 UTC</small>
       </div>
     </div>
   </div>
