--- a/quic/libp2p/transports/wstransport.html
+++ b/quic/libp2p/transports/wstransport.html
@@ -222,21 +222,13 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
 </li>
 <li>
-  <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
-  <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#WsTransportTrackerName"
-    title="WsTransportTrackerName = &quot;libp2p.wstransport&quot;">WsTransportTrackerName</a></li>
-
-  </ul>
-</li>
-<li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2CMultiAddress"
-    title="new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: MultiAddress = MultiAddress()): T:type">new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: MultiAddress = MultiAddress()): T:type</a></li>
+      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"
+    title="new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type">new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type</a></li>
   <li><a class="reference" href="#new%2Ctypedesc%5BWsTransport%5D%2CUpgrade%2Cset%5BServerFlags%5D%2CopenArray%5BExtFactory%5D%2CRng"
     title="new(T: typedesc[WsTransport]; upgrade: Upgrade; flags: set[ServerFlags] = {};
     factories: openArray[ExtFactory] = []; rng: Rng = nil;
@@ -282,6 +274,11 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple nested-toc-section">handles
       <li><a class="reference" href="#handles.e%2CWsTransport%2CMultiAddress"
     title="handles(t: WsTransport; address: MultiAddress): bool">handles(t: WsTransport; address: MultiAddress): bool</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">initStream
+      <li><a class="reference" href="#initStream.e%2CWsStream"
+    title="initStream(s: WsStream)">initStream(s: WsStream)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">readOnce
@@ -352,26 +349,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L96"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L101"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L96" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-
-</dl></div>
-<div class="section" id="10">
-<h1><a class="toc-backref" href="#10">Consts</a></h1>
-<dl class="item">
-<div id="WsTransportTrackerName" class="tohide">
-<dt><pre><a href="wstransport.html#WsTransportTrackerName"><span class="Identifier">WsTransportTrackerName</span></a> <span class="Other">=</span> <span class="StringLit">&quot;libp2p.wstransport&quot;</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L37"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L37" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L101" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -380,17 +360,17 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="new,typeWsStream,WSSession,Direction,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2CMultiAddress"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
-         <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">;</span> <span class="Identifier">observedAddr</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a> <span class="Other">=</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
+<div id="new,typeWsStream,WSSession,Direction,Opt[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L45"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L50"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L45" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L50" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -403,9 +383,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a clear-text WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L337"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L343"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L337" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L343" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -419,9 +399,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a secure WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L315"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L321"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L315" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L321" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -431,9 +411,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L111"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L116"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L111" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L116" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -449,9 +429,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 accept a new WS connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L235"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L239"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L235" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L239" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -462,9 +442,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L89"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L94"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L89" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L94" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -474,9 +454,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L93"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L98"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L93" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L98" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -487,9 +467,21 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L310"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L316"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L310" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L316" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="initStream.e,WsStream" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#initStream.e%2CWsStream"><span class="Identifier">initStream</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">WsStream</span><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L44"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L44" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -500,9 +492,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L80"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L80" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -513,9 +505,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 listen on the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L116"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L121"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L116" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L121" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -526,9 +518,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 stop the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L170"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L175"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L170" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L175" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -539,9 +531,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L85"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/transports/wstransport.nim#L90"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L85" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L90" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -550,7 +542,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
+<a href="../upgrademngrs/upgrade.html#TransportInvalidAddrError"><span class="Identifier">TransportInvalidAddrError</span></a>, <a href="../upgrademngrs/upgrade.html#dial,Transport,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a>, <a href="../upgrademngrs/upgrade.html#newTransportClosedError,ref.Exception"><span class="Identifier">newTransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeOutgoing.e,Transport,Connection,Opt[PeerId]"><span class="Identifier">upgradeOutgoing</span></a>, <a href="../upgrademngrs/upgrade.html#stop.e,Transport"><span class="Identifier">stop</span></a>, <a href="../upgrademngrs/upgrade.html#accept.e,Transport"><span class="Identifier">accept</span></a>, <a href="../upgrademngrs/upgrade.html#TransportError"><span class="Identifier">TransportError</span></a>, <a href="../upgrademngrs/upgrade.html#TransportClosedError"><span class="Identifier">TransportClosedError</span></a>, <a href="../upgrademngrs/upgrade.html#handles.e,Transport,MultiAddress"><span class="Identifier">handles</span></a>, <a href="../upgrademngrs/upgrade.html#dial.e,Transport,string,MultiAddress"><span class="Identifier">dial</span></a>, <a href="../upgrademngrs/upgrade.html#upgradeIncoming.e,Transport,Connection"><span class="Identifier">upgradeIncoming</span></a>, <a href="../upgrademngrs/upgrade.html#start.e,Transport,seq[MultiAddress]"><span class="Identifier">start</span></a>
 </dl></div>
 
   </div>
@@ -560,7 +552,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-26 13:36:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-17 16:37:08 UTC</small>
       </div>
     </div>
   </div>
